2004-12-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/include/open-type-font.hh (count): New method.

	* mf/aybabtu.pe.in: Typo.

	* Documentation/user/out/lilypond-internals.nexi (Scheme
	functions): Typo.

	* lily/include/guile-compatibility.hh (SCM_HASHTABLE_P): Add compat.

2004-12-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* buildscripts/gen-bigcheese-scripts.py (i): use symbols for
	subfonts.

	* scm/output-tex.scm (named-glyph): new function. This fixes TeX output.

	* scm/framework-tex.scm (otf-font-load-command): load subfonts.
	(tex-font-command-raw): new function.

	* lily/include/virtual-font-metric.hh (Module): remove file

	* lily/virtual-font-metric.cc (Module): remove file.
	

	* lily/open-type-font.cc (LY_DEFINE): ly:otf-font-glyph-info
	(get_indexed_char): read bbox from lily table if present.

2004-12-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile ($(outdir)/aybabtu.subfonts): rule for
	aybabtu.subfonts

	* mf/feta-beugel.mf (y): don't number consecutively, instead, use
	global glyphname. Enables more than 64 glyphs in the OTF.

2004-12-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/font.scm (add-music-fonts): Load aybabtu iso all separate
	braces.

	* lily/open-type-font.cc (design_size): Use 12 as default for
	design size.

	* mf/aybabtu.pe.in: New file.  Merge all our braces.

	* mf/GNUmakefile: Generate aybabtu.

	* tex/lilyponddefs.tex: teTeX 3.0 pdfetex fix.

2004-12-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily-library.scm (char->unicode-index): Remove.

	* scm/output-gnome.scm (text): Bugfix for plain string input.
	Updates.

	* scm/output-svg.scm (svg-font): Add weight to font selection.

2004-12-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/topdocs/INSTALL.texi (Top): Point to
	buildscripts/out/clean-fonts instead of
	buildscripts/clean-fonts.sh. 

2004-12-13  Graham Percival  <gperlist@shaw.ca>

	* input/regression/figured-bass.ly: attempt to clarify text.
