@@ -1,5 +1,8 @@
 2004-12-17  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/framework-tex.scm (otf-font-load-command): Bugfix: subfonts
+	are not symbols.
+
 	* lily/include/open-type-font.hh (count): New method.
 
 	* mf/aybabtu.pe.in: Typo.
